--- a/package.json
+++ b/package.json
@@ -9,16 +9,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.2.2",
     "element-plus": "^2.2.27",
+    "mockjs": "^1.1.0",
+    "qs": "^6.11.0",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@types/node": "^18.11.17",
+    "@types/qs": "^6.9.7",
     "@typescript-eslint/eslint-plugin": "^5.47.0",
     "@vitejs/plugin-vue": "^4.0.0",
     "autoprefixer": "^10.4.13",
+    "cross-env": "^7.0.3",
     "eslint": "^8.30.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard-with-typescript": "^24.0.0",
@@ -32,6 +37,7 @@
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.4",
     "vite": "^4.0.0",
+    "vite-plugin-mock": "^2.9.6",
     "vue-tsc": "^1.0.11"
   }
 }
